Fix app height on mobile touch devices

--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,6 @@ body {
   display: flex;
   justify-content: center;
   min-width: 320px;
-  min-height: 100vh;
   background-color: #6c7f7f;
 }
 
